# doc2rag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  result.json
.github/: pull_request_template.md
data/excels/: long.table.tables.json  long.table.tables.md  long.table.xlsx  multi.header.tables.json  multi.header.tables.md  multi.header.xlsx  multi.tables.tables.json  multi.tables.tables.md  multi.tables.xlsx  nogap.tables.json  nogap.tables.md  nogap.xlsx  nogap_2.tables.json  nogap_2.tables.md  nogap_2.xlsx
data/pdf/: multi.table.pdf.tables.json  multi.table.pdf.tables.md
data/temp/: result.json
deploy/: API_NODEJS.md  README.md  modal_app.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SERVICES.md
scripts/: check_api_keys.py  gradio_app.py  gradio_app_paddleocr_vl.py  gradio_excel_tables.py  gradio_pdf_tables.py  medical_advisor.py  regen_viz.py  run_visualize.py
src/doc2rag/: __init__.py  advisor.py  config.py  pipeline.py
src/doc2rag/api/: __init__.py  app.py
src/doc2rag/chunking/: __init__.py  chunker.py  embed.py
src/doc2rag/docai/: __init__.py  client.py  extract.py
src/doc2rag/excel/: __init__.py  tables.py
src/doc2rag/ingestion/: __init__.py  excel.py  loaders.py  preprocess.py
src/doc2rag/layout/: __init__.py  detector.py
src/doc2rag/ocr/: __init__.py  engine.py
src/doc2rag/schema/: __init__.py  canonical.py  intermediate.py
src/doc2rag/storage/: __init__.py  mongo.py
src/doc2rag/structuring/: __init__.py  client.py  llm_output_schema.py  location_resolver.py  prompts.py  response_schema.py
src/doc2rag/tables/: __init__.py  html_grid.py  item_dictionary.py  reconstruct.py
src/doc2rag/validation/: __init__.py  rules.py
src/doc2rag/vl/: __init__.py  models.py  parser.py  render.py
tests/: test_chunking.py  test_docai_extract.py  test_html_grid.py  test_item_dictionary.py  test_location_resolver.py  test_table_reconstruction.py  test_validation.py  test_vl_core.py
