[project]
name = "doc2rag"
version = "0.1.0"
description = "Parse documents into Markdown + structured JSON with an interactive layout view, powered by PaddleOCR-VL (with a legacy Document AI + LLM pipeline retained)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "google-cloud-documentai>=2.29",
    "rapidfuzz>=3.9",
    "openai>=1.35",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# PaddleOCR-VL core engine + interactive demo. Install a matching paddlepaddle
# build separately (GPU: paddlepaddle-gpu==3.2.1, CPU: paddlepaddle==3.2.1) —
# see README. `paddleocr[doc-parser]` pulls the VL pipeline extras.
vl = [
    "paddleocr[doc-parser]>=3.6.0",
    "gradio>=4.44",
    "pillow>=10.0",
    "numpy>=1.26",
    "pypdfium2>=4.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# Deploy the parsing API to Modal (see deploy/README.md).
deploy = [
    "modal>=1.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "NoClassBasedTestsInThisProject"
